<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/DateOfMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:hint="@string/date_of_meeting"
        android:padding="16dp"
        android:singleLine="true"
        android:textColor="@color/BLEUCIEL"
        android:textSize="16sp"
        android:textStyle="bold"
        app:drawableTint="@color/BLEUCIEL"
        app:drawableTopCompat="@drawable/ic_baseline_date_range_24"
        app:layout_constraintBottom_toTopOf="@id/PlaceOfMeeting"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/TimeOfMeeting"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TimeOfMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:gravity="center"
        android:hint="@string/time_of_meeting"
        android:padding="16dp"
        android:singleLine="true"
        android:textColor="@color/BLEUCIEL"
        android:textSize="16sp"
        android:textStyle="bold"
        app:drawableTint="@color/BLEUCIEL"
        app:drawableTopCompat="@drawable/ic_baseline_access_time_filled_24"
        app:layout_constraintBottom_toTopOf="@id/PlaceOfMeeting"
        app:layout_constraintLeft_toRightOf="@id/DateOfMeeting"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PlaceOfMeeting"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/place_of_meeting"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:helperText="Following format: Salle A-J"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/VERTCLAIR"
        app:layout_constraintBottom_toTopOf="@id/SubjectOfMeeting"
        app:layout_constraintTop_toBottomOf="@id/TimeOfMeeting"
        tools:layout_editor_absoluteX="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PlaceOfMeetingEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SubjectOfMeeting"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/subject_of_meeting"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:helperText="Short description"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/VERTCLAIR"
        app:layout_constraintBottom_toTopOf="@id/ListOfParticipants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PlaceOfMeeting">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/SubjectOfMeetingEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ListOfParticipants"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:layout_marginTop="376dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/list_of_participants"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:helperText="Separate participants with ,"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/VERTCLAIR"
        app:layout_constraintBottom_toTopOf="@id/SaveMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ListOfParticipantsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/SaveMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/save_meeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

</androidx.constraintlayout.widget.ConstraintLayout>
