<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/meeting_filter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/filter_meeting"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_date_filter"
                android:icon="@drawable/ic_baseline_date_range_24"
                android:title="@string/filter_per_date" />
            <item
                android:id="@+id/menu_place_filter"
                android:icon="@drawable/ic_baseline_location_on_24"
                android:title="@string/filter_per_place" />
            <item
                android:id="@+id/no_filter"
                android:icon="@drawable/ic_baseline_do_not_disturb_off_24"
                android:title="@string/no_filter" />
        </menu>
    </item>
</menu>